验证java 常量